# What-s-My-IP

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
resources/: icon.icns  resources.qrc  whatsmyip.rc
